@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2011,v 1.399 2011/02/18 08:20:59 wiz Exp $
+$NetBSD: CHANGES-2011,v 1.400 2011/02/18 23:56:48 shattered Exp $
 
 Changes to the packages collection and infrastructure in 2011:
 
@@ -653,3 +653,4 @@ Changes to the packages collection and infrastructure in 2011:
 	Updated www/py-django-cms to 2.1.2 [adam 2011-02-17]
 	Added www/py-django-appmedia version 1.0.1 [adam 2011-02-17]
 	Updated fonts/vlgothic-ttf to 20101218 [wiz 2011-02-18]
+	Updated databases/abook to 0.6.0rc2 [shattered 2011-02-18]
